--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ VANTA.BIRDS({
   scale: 1.00,
   scaleMobile: 1.00
 })
-</script>                    </section>          <ul class="social-list"><li class="social-child"><a href="https://www.behance.net/jamesmota/" target="top" class="social-behance"><i class="fab fa-behance" aria-hidden="true"></i></a></li><li class="social-child"><a href="https://www.linkedin.com/in/jamesmotaesteves/" target="top" class="social-linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li><li class="social-child"><a href="mailto:contato@jamesmota.com.br" target="top" class="social-envelope-o"><i class="far fa-envelope" aria-hidden="true"></i></a></li><li class="social-child"><a href="https://linktr.ee/jamesmota" target="top" class="social-rss"><i class="fas fa-rss" aria-hidden="true"></i></a></li></ul>      <!-- Fade in background image after load -->      <script>
+</script>                    </section>          <ul class="social-list"><li class="social-child"><a href="https://www.behance.net/jamesmota/" target="top" class="social-behance"><i class="fab fa-behance" aria-hidden="true"></i></a></li><li class="social-child"><a href="https://www.linkedin.com/in/jamesmotaesteves/" target="top" class="social-linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li><li class="social-child"><a href="mailto:jamesmota76@gmail.com" target="top" class="social-envelope-o"><i class="far fa-envelope" aria-hidden="true"></i></a></li><li class="social-child"><a href="https://linktr.ee/jamesmota" target="top" class="social-rss"><i class="fas fa-rss" aria-hidden="true"></i></a></li></ul>      <!-- Fade in background image after load -->      <script>
         window.addEventListener("load",function(event) {
             init();
         });
